k8s/dept.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dept-dev
  namespace: static-ns
spec:
  selector:
    matchLabels:
      app: dept-dev
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: dept-dev
    spec:
      containers:
      - name: dept-dev
        image: 303760478036.dkr.ecr.us-east-2.amazonaws.com/axyya:number
        resources:
          requests:
            memory: "128Mi"
            cpu: 100m
          limits:
            memory: "256Mi"
            cpu: 1
        ports:
          - containerPort: 3000
