k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-dev
  namespace: static-ns
spec:
  selector:
    app: dept-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
